--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,35 @@ html
     background-repeat: no-repeat;
 }
 
+.card-container
+{
+    background: #fff;
+    border-radius: 25px;
+    padding: 25px;
+    max-width: 450px;
+    display: grid;
+}
+
+input
+{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    text-align: center;
+    border-radius: 12px;
+    background: #000;
+    color: #fff;
+}
+
+form
+{
+    display: grid;
+}
+
 footer
 {
-    height: 200px;
+    height: 150px;
+    padding: 25px;
     text-align: center;
     background-color:#000;
     color: #fff;
