--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html
 .card-container
 {
     background: #fff;
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 25px;
     max-width: 450px;
     display: grid;
@@ -65,8 +65,16 @@ input[type=button], input[type=submit], input[type=reset] {
   color: #fff;
   padding: 4px 32px;
   text-decoration: none;
-  margin: 4px 100px;
+  margin: 4px 110px;
   cursor: pointer;
+}
+
+.texto-intro
+{
+    color: #fff;
+    text-align: center;
+    margin: 50px;
+    font-size: 5vh;
 }
 
 form
@@ -74,10 +82,11 @@ form
     display: grid;
 }
 
-subscribe-text
+.subscribe-text
 {
     color: #000;
-    font-size: 1000;
+    font-size: 2vh;
+    margin: 20px;
 }
 
 footer
