--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html
     height: 100vh;
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
 }
